# Advance-astrology-framework

./: .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/hooks/: session-start.sh
advance_astrology/: __init__.py  angles.py  aspects.py  ayanamsa.py  chart.py  constants.py  dasha.py  ephemeris.py  houses.py  nakshatra.py
advance_astrology/vedic/: __init__.py  arudha.py  ashtakavarga.py  aspects.py  avastha.py  chalit.py  chart.py  compatibility.py  dashas.py  dignities.py  jaimini.py  kakshya.py  kp.py  nakshatra_attributes.py  nature.py  panchanga.py  sahams.py  shadbala.py  special_lagnas.py  strength.py  transits.py  triangulate.py  upagrahas.py  vargas.py  varshaphal.py  yogas.py
advance_astrology/western/: __init__.py  declination.py  dignities.py  lots.py  midpoints.py
docs/: AI_TRIANGULATION_PROMPT.md  INTERPRETATION_IMPROVEMENTS.md  MY_PROMPT.md  PATTERNS_TO_NOTE.md  PROJECT_PLAN.md  RULE_CHANGELOG.md  SESSION_LEARNINGS_marriage_retro.md
examples/: basic_chart.py  kp_life_events_2024.py  life_events_2024.py  playbook_matrix.py  triangulate_2024.py  vedic_chart.py
interpreter/: build_matrix.py  build_prompt.py  coverage.py  event_evidence.py  predict.py  significators.py
scripts/: download_ephemeris.py  make_playbook_pdf.py
tests/: test_coverage.py  test_engine.py  test_event_evidence.py  test_significators.py  test_vedic.py  test_western.py
webapp/: ROADMAP.md  index.html  manifest.json  server.py
