[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advance-astrology-framework"
version = "0.1.0"
description = "A Python astrology engine (Western tropical + Vedic sidereal) built on the Skyfield / JPL ephemeris"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Advance Astrology Framework contributors" }]
keywords = ["astrology", "ephemeris", "skyfield", "vedic", "natal-chart", "nakshatra", "dasha"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "skyfield>=1.45",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/jharavi162/advance-astrology-framework"

[tool.setuptools.packages.find]
include = ["advance_astrology*"]

[tool.setuptools.package-data]
advance_astrology = ["data/*.bsp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
